Adding deep learning module

--- a/FassihaRESTAPI/NLP/Response_generation/Deeplearning/arabic_chatbot_seq2seq.ipynb
+++ b/FassihaRESTAPI/NLP/Response_generation/Deeplearning/arabic_chatbot_seq2seq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -125,8 +125,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "كم تبلغ القاعدة المقامة فوقها الكعبة المشرفة ؟ \n",
-      "75سم\n"
+      "[6698    3   57 4936 4695 3021  372  793    1 6699    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0]\n",
+      "[6698 6221 6699    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0]\n"
      ]
     }
    ],
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -152,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -282,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -313,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -349,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -379,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -457,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -497,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -555,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -564,36 +568,45 @@
    "outputs": [],
    "source": [
     "class PositionalEncoding(tf.keras.layers.Layer):\n",
+    "    \n",
     "\n",
-    "  def __init__(self, position, d_model):\n",
-    "    super(PositionalEncoding, self).__init__()\n",
-    "    self.pos_encoding = self.positional_encoding(position, d_model)\n",
+    "    def __init__(self, position, d_model):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        self.pos_encoding = self.positional_encoding(position, d_model)\n",
     "\n",
-    "  def get_angles(self, position, i, d_model):\n",
-    "    angles = 1 / tf.pow(10000, (2 * (i // 2)) / tf.cast(d_model, tf.float32))\n",
-    "    return position * angles\n",
+    "    def get_angles(self, position, i, d_model):\n",
+    "        angles = 1 / tf.pow(10000, (2 * (i // 2)) / tf.cast(d_model, tf.float32))\n",
+    "        return position * angles\n",
     "\n",
-    "  def positional_encoding(self, position, d_model):\n",
-    "    angle_rads = self.get_angles(\n",
+    "    def positional_encoding(self, position, d_model):\n",
+    "        angle_rads = self.get_angles(\n",
     "        position=tf.range(position, dtype=tf.float32)[:, tf.newaxis],\n",
     "        i=tf.range(d_model, dtype=tf.float32)[tf.newaxis, :],\n",
     "        d_model=d_model)\n",
-    "    # apply sin to even index in the array\n",
-    "    sines = tf.math.sin(angle_rads[:, 0::2])\n",
-    "    # apply cos to odd index in the array\n",
-    "    cosines = tf.math.cos(angle_rads[:, 1::2])\n",
+    "        # apply sin to even index in the array\n",
+    "        sines = tf.math.sin(angle_rads[:, 0::2])\n",
+    "        # apply cos to odd index in the array\n",
+    "        cosines = tf.math.cos(angle_rads[:, 1::2])\n",
     "\n",
-    "    pos_encoding = tf.concat([sines, cosines], axis=-1)\n",
-    "    pos_encoding = pos_encoding[tf.newaxis, ...]\n",
-    "    return tf.cast(pos_encoding, tf.float32)\n",
+    "        pos_encoding = tf.concat([sines, cosines], axis=-1)\n",
+    "        pos_encoding = pos_encoding[tf.newaxis, ...]\n",
+    "        return tf.cast(pos_encoding, tf.float32)\n",
     "\n",
-    "  def call(self, inputs):\n",
-    "    return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :]"
+    "    def call(self, inputs):\n",
+    "        return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :]\n",
+    "  \n",
+    "    def get_config(self):\n",
+    "        congif = super().get_config().copy()\n",
+    "        config.update({\n",
+    "            'position': self.position,\n",
+    "            'd_model': self.d_model,\n",
+    "        })\n",
+    "        return config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -641,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -676,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -705,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -744,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -768,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -799,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -849,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -893,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -937,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -968,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1024,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1055,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1081,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1103,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1130,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1158,7 +1171,7 @@
        "Text(0.5, 0, 'Train Step')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1185,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1208,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1245,82 +1258,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Model failed to serialize as JSON. Ignoring... Layer PositionalEncoding has arguments in `__init__` and therefore must override `get_config`.\n"
+      "WARNING:tensorflow:Model failed to serialize as JSON. Ignoring... name 'config' is not defined\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Model failed to serialize as JSON. Ignoring... Layer PositionalEncoding has arguments in `__init__` and therefore must override `get_config`.\n"
+      "WARNING:tensorflow:Model failed to serialize as JSON. Ignoring... name 'config' is not defined\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "32/32 [==============================] - 31s 980ms/step - loss: 0.1332 - accuracy: 0.0639\n",
-      "Epoch 2/20\n",
-      "32/32 [==============================] - 33s 1s/step - loss: 0.1212 - accuracy: 0.0665\n",
-      "Epoch 3/20\n",
-      "32/32 [==============================] - 36s 1s/step - loss: 0.1097 - accuracy: 0.0689\n",
-      "Epoch 4/20\n",
-      "32/32 [==============================] - 36s 1s/step - loss: 0.0978 - accuracy: 0.0703\n",
-      "Epoch 5/20\n",
-      "32/32 [==============================] - 33s 1s/step - loss: 0.0869 - accuracy: 0.0716\n",
-      "Epoch 6/20\n",
-      "32/32 [==============================] - 41s 1s/step - loss: 0.0766 - accuracy: 0.0729\n",
-      "Epoch 7/20\n",
-      "32/32 [==============================] - 37s 1s/step - loss: 0.0661 - accuracy: 0.0741\n",
-      "Epoch 8/20\n",
-      "32/32 [==============================] - 31s 983ms/step - loss: 0.0572 - accuracy: 0.0749\n",
-      "Epoch 9/20\n",
-      "32/32 [==============================] - 32s 1s/step - loss: 0.0484 - accuracy: 0.0756\n",
-      "Epoch 10/20\n",
-      "32/32 [==============================] - 34s 1s/step - loss: 0.0405 - accuracy: 0.0763\n",
-      "Epoch 11/20\n",
-      "32/32 [==============================] - 32s 999ms/step - loss: 0.0340 - accuracy: 0.0764\n",
-      "Epoch 12/20\n",
-      "32/32 [==============================] - 31s 984ms/step - loss: 0.0277 - accuracy: 0.0767\n",
-      "Epoch 13/20\n",
-      "32/32 [==============================] - 33s 1s/step - loss: 0.0219 - accuracy: 0.0769\n",
-      "Epoch 14/20\n",
-      "32/32 [==============================] - 33s 1s/step - loss: 0.0179 - accuracy: 0.0769\n",
-      "Epoch 15/20\n",
-      "32/32 [==============================] - 33s 1s/step - loss: 0.0142 - accuracy: 0.0769\n",
-      "Epoch 16/20\n",
-      "32/32 [==============================] - 29s 903ms/step - loss: 0.0110 - accuracy: 0.0770\n",
-      "Epoch 17/20\n",
-      "32/32 [==============================] - 29s 902ms/step - loss: 0.0082 - accuracy: 0.0770\n",
-      "Epoch 18/20\n",
-      "32/32 [==============================] - 29s 907ms/step - loss: 0.0069 - accuracy: 0.0770\n",
-      "Epoch 19/20\n",
-      "32/32 [==============================] - 29s 903ms/step - loss: 0.0062 - accuracy: 0.0768\n",
-      "Epoch 20/20\n",
-      "32/32 [==============================] - 29s 905ms/step - loss: 0.0060 - accuracy: 0.0768\n"
+      "Epoch 1/3\n",
+      " 1/32 [..............................] - ETA: 0s - loss: 0.6283 - accuracy: 0.0000e+00WARNING:tensorflow:From /home/cersei5991/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
+      "Instructions for updating:\n",
+      "use `tf.profiler.experimental.stop` instead.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/cersei5991/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
+      "Instructions for updating:\n",
+      "use `tf.profiler.experimental.stop` instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 27s 848ms/step - loss: 0.6760 - accuracy: 7.6885e-05\n",
+      "Epoch 2/3\n",
+      "32/32 [==============================] - 28s 888ms/step - loss: 0.6394 - accuracy: 0.0220\n",
+      "Epoch 3/3\n",
+      "32/32 [==============================] - 29s 895ms/step - loss: 0.5929 - accuracy: 0.0256\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f6a471da9d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fa5f3bb0310>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "EPOCHS = 20\n",
+    "EPOCHS = 3\n",
     "\n",
     "model.fit(dataset, epochs=EPOCHS, callbacks=[tensorboard])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1368,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1394,13 +1391,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: من مخترع الكهرباء\n",
-      "Output: محمد بن زكريا الرازي\n"
+      "Input: مرحبا\n",
+      "Output: \n"
      ]
     }
    ],
    "source": [
-    "output = predict('من مخترع الكهرباء')"
+    "output = predict('مرحبا')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_weights(\"data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = transformer(\n",
+    "    vocab_size=VOCAB_SIZE,\n",
+    "    num_layers=NUM_LAYERS,\n",
+    "    units=UNITS,\n",
+    "    d_model=D_MODEL,\n",
+    "    num_heads=NUM_HEADS,\n",
+    "    dropout=DROPOUT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7fa5f12c9190>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "md.load_weights(\"data/\")"
    ]
   },
   {
