using deeplearning model and adding a new way to 2nd level commands

--- a/FassihaRESTAPI/NLP/Response_generation/Deeplearning/arabic_chatbot_seq2seq.ipynb
+++ b/FassihaRESTAPI/NLP/Response_generation/Deeplearning/arabic_chatbot_seq2seq.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -125,12 +125,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6698    3   57 4936 4695 3021  372  793    1 6699    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0]\n",
-      "[6698 6221 6699    0    0    0    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0    0]\n"
+      "كم تبلغ القاعدة المقامة فوقها الكعبة المشرفة ؟ \n",
+      "75سم\n"
      ]
     }
    ],
@@ -1272,7 +1268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
+      "Epoch 1/40\n",
       " 1/32 [..............................] - ETA: 0s - loss: 0.6283 - accuracy: 0.0000e+00WARNING:tensorflow:From /home/cersei5991/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
       "Instructions for updating:\n",
       "use `tf.profiler.experimental.stop` instead.\n"
@@ -1291,17 +1287,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32/32 [==============================] - 27s 848ms/step - loss: 0.6760 - accuracy: 7.6885e-05\n",
-      "Epoch 2/3\n",
-      "32/32 [==============================] - 28s 888ms/step - loss: 0.6394 - accuracy: 0.0220\n",
-      "Epoch 3/3\n",
-      "32/32 [==============================] - 29s 895ms/step - loss: 0.5929 - accuracy: 0.0256\n"
+      "32/32 [==============================] - 27s 851ms/step - loss: 0.6760 - accuracy: 7.6885e-05\n",
+      "Epoch 2/40\n",
+      "32/32 [==============================] - 29s 893ms/step - loss: 0.6394 - accuracy: 0.0220\n",
+      "Epoch 3/40\n",
+      "32/32 [==============================] - 28s 889ms/step - loss: 0.5929 - accuracy: 0.0256\n",
+      "Epoch 4/40\n",
+      "32/32 [==============================] - 29s 898ms/step - loss: 0.5605 - accuracy: 0.0256\n",
+      "Epoch 5/40\n",
+      "32/32 [==============================] - 28s 885ms/step - loss: 0.5371 - accuracy: 0.0256\n",
+      "Epoch 6/40\n",
+      "32/32 [==============================] - 28s 890ms/step - loss: 0.5147 - accuracy: 0.0256\n",
+      "Epoch 7/40\n",
+      "32/32 [==============================] - 29s 894ms/step - loss: 0.4922 - accuracy: 0.0256\n",
+      "Epoch 8/40\n",
+      "32/32 [==============================] - 28s 890ms/step - loss: 0.4706 - accuracy: 0.0256\n",
+      "Epoch 9/40\n",
+      "32/32 [==============================] - 28s 890ms/step - loss: 0.4520 - accuracy: 0.0256\n",
+      "Epoch 10/40\n",
+      "32/32 [==============================] - 29s 895ms/step - loss: 0.4376 - accuracy: 0.0256\n",
+      "Epoch 11/40\n",
+      "32/32 [==============================] - 29s 894ms/step - loss: 0.4243 - accuracy: 0.0256\n",
+      "Epoch 12/40\n",
+      "32/32 [==============================] - 28s 886ms/step - loss: 0.4113 - accuracy: 0.0256\n",
+      "Epoch 13/40\n",
+      "32/32 [==============================] - 29s 893ms/step - loss: 0.4004 - accuracy: 0.0259\n",
+      "Epoch 14/40\n",
+      "32/32 [==============================] - 29s 900ms/step - loss: 0.3900 - accuracy: 0.0270\n",
+      "Epoch 15/40\n",
+      "32/32 [==============================] - 29s 895ms/step - loss: 0.3781 - accuracy: 0.0276\n",
+      "Epoch 16/40\n",
+      "32/32 [==============================] - 29s 897ms/step - loss: 0.3644 - accuracy: 0.0279\n",
+      "Epoch 17/40\n",
+      "32/32 [==============================] - 29s 903ms/step - loss: 0.3516 - accuracy: 0.0282\n",
+      "Epoch 18/40\n",
+      "32/32 [==============================] - 29s 904ms/step - loss: 0.3387 - accuracy: 0.0285\n",
+      "Epoch 19/40\n",
+      "32/32 [==============================] - 29s 892ms/step - loss: 0.3261 - accuracy: 0.0291\n",
+      "Epoch 20/40\n",
+      "32/32 [==============================] - 29s 897ms/step - loss: 0.3143 - accuracy: 0.0296\n",
+      "Epoch 21/40\n",
+      "32/32 [==============================] - 29s 898ms/step - loss: 0.3030 - accuracy: 0.0304\n",
+      "Epoch 22/40\n",
+      "32/32 [==============================] - 29s 907ms/step - loss: 0.2913 - accuracy: 0.0315\n",
+      "Epoch 23/40\n",
+      "32/32 [==============================] - 29s 903ms/step - loss: 0.2803 - accuracy: 0.0323\n",
+      "Epoch 24/40\n",
+      "32/32 [==============================] - 29s 917ms/step - loss: 0.2686 - accuracy: 0.0336\n",
+      "Epoch 25/40\n",
+      "32/32 [==============================] - 29s 913ms/step - loss: 0.2570 - accuracy: 0.0352\n",
+      "Epoch 26/40\n",
+      "32/32 [==============================] - 29s 907ms/step - loss: 0.2451 - accuracy: 0.0372\n",
+      "Epoch 27/40\n",
+      "32/32 [==============================] - 30s 922ms/step - loss: 0.2335 - accuracy: 0.0400\n",
+      "Epoch 28/40\n",
+      "32/32 [==============================] - 28s 883ms/step - loss: 0.2218 - accuracy: 0.0423\n",
+      "Epoch 29/40\n",
+      "32/32 [==============================] - 28s 883ms/step - loss: 0.2092 - accuracy: 0.0451\n",
+      "Epoch 30/40\n",
+      "32/32 [==============================] - 28s 886ms/step - loss: 0.1967 - accuracy: 0.0484\n",
+      "Epoch 31/40\n",
+      "32/32 [==============================] - 28s 885ms/step - loss: 0.1841 - accuracy: 0.0520\n",
+      "Epoch 32/40\n",
+      "32/32 [==============================] - 28s 886ms/step - loss: 0.1722 - accuracy: 0.0552\n",
+      "Epoch 33/40\n",
+      "32/32 [==============================] - 28s 879ms/step - loss: 0.1597 - accuracy: 0.0581\n",
+      "Epoch 34/40\n",
+      "32/32 [==============================] - 28s 887ms/step - loss: 0.1473 - accuracy: 0.0610\n",
+      "Epoch 35/40\n",
+      "32/32 [==============================] - 28s 885ms/step - loss: 0.1346 - accuracy: 0.0635\n",
+      "Epoch 36/40\n",
+      "32/32 [==============================] - 28s 883ms/step - loss: 0.1222 - accuracy: 0.0661\n",
+      "Epoch 37/40\n",
+      "32/32 [==============================] - 28s 882ms/step - loss: 0.1104 - accuracy: 0.0683\n",
+      "Epoch 38/40\n",
+      "32/32 [==============================] - 30s 934ms/step - loss: 0.0987 - accuracy: 0.0700\n",
+      "Epoch 39/40\n",
+      "32/32 [==============================] - 29s 913ms/step - loss: 0.0878 - accuracy: 0.0714\n",
+      "Epoch 40/40\n",
+      "32/32 [==============================] - 30s 942ms/step - loss: 0.0775 - accuracy: 0.0727\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fa5f3bb0310>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f4d5eaf8150>"
       ]
      },
      "execution_count": 36,
@@ -1310,7 +1380,7 @@
     }
    ],
    "source": [
-    "EPOCHS = 3\n",
+    "EPOCHS = 40\n",
     "\n",
     "model.fit(dataset, epochs=EPOCHS, callbacks=[tensorboard])"
    ]
@@ -1365,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1391,18 +1461,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: مرحبا\n",
-      "Output: \n"
+      "Input: من أنا\n",
+      "Output: محمد\n"
      ]
     }
    ],
    "source": [
-    "output = predict('مرحبا')"
+    "output = predict('من أنا')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
